<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.contacts.AddContactFragment">

    <data>
        <variable
            name="addNewContactViewModel"
            type="com.addressbook.contactslist.viewmodels.AddNewContactViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/side_margin"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/firstNameConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:hint="@string/first_name"
                    android:text="@={addNewContactViewModel.firstNameObserver}"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@+id/firstNameEditText"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lastNameConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:hint="@string/last_name"
                    android:text="@={addNewContactViewModel.lastNameObserver}"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@+id/lastNameEditText"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/emailConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:hint="@string/email_address"
                    android:text="@={addNewContactViewModel.emailObserver}"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@+id/emailEditText"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/phoneConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:hint="@string/phone_number"
                    android:text="@={addNewContactViewModel.phoneObserver}"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@+id/phoneEditText"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/addressConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/addressEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:hint="@string/address"
                    android:text="@={addNewContactViewModel.addressObserver}"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@+id/addressEditText"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/side_margin"
            android:paddingVertical="12dp"
            android:layout_marginBottom="24dp"
            android:text="@string/save"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>